# rl144

./: .gitignore  CLAUDE.md  Cargo.toml  Makefile  rl144-linux-x86_64-upx  rl144.sav
docs/design/: 2026-07-22-mercy-economy-arc.md  monomyth-batch-brief.md  monomyth-notes.md  monomyth.md
docs/design/proposals/: 0-brief.md  A-authored-dungeon.md  B-haunted-floppy.md  C-impossible-object.md  DECISION.md  SYNTHESIS.md
docs/story/: FLAVOR-DRAFT-v0.md  SPACES-DRAFT-v0.md  STORY-COMPILE-v1.md
docs/superpowers/plans/: 2026-07-18-batch-3.md  2026-07-19-batch-5-mercy.md  2026-07-19-batch-6-variety.md  2026-07-19-batch-7-cartridge.md  2026-07-19-batch-8-mcguffin.md  2026-07-21-batch-9-overworld.md  2026-07-22-batch-10-tactical-bots.md  2026-07-22-batch-11-complete-ogre.md  2026-07-24-batch-12-light-as-grace.md  2026-07-24-batch-13-ride-alongs.md
src/: backend_minifb.rs  backend_term.rs  content.rs  game.rs  gamedef.rs  headless.rs  main.rs  render.rs  rng.rs  save.rs
src/games/: contractor.rs  mod.rs
tests/: pacifist-band.json  sim-band.json  solver-band.json  tactical-band.json  tactical-pacifist-band.json
tests/fixtures/: ref.sav
tests/golden/: seed_1.txt  seed_1337.txt  seed_2.txt  seed_3.txt  seed_42.txt
